update button text color

--- a/airconsole-controls/button/button.css
+++ b/airconsole-controls/button/button.css
@@ -60,7 +60,7 @@
 
 
 .button-80 .button-text {
-    color: white;
+    color: black;
 }
 
 .button-text {
@@ -69,6 +69,6 @@
     margin-top: -0.5em;
     position: absolute;
     text-align: center;
-    color: white;
+    color: black;
 }
 
